--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -128,7 +128,7 @@
               <h5>Información</h5>
               <ul>
                 <li><p>UGEL 05-SJL</p></li>
-                <li><p>Av. Francisco Bolognesi Huascar, San Juan de Lurigancho</p></li>
+                <li><p>Av. Francisco Bolognesi, San Juan de Lurigancho</p></li>
                 <li><p>(01) 387 5890</p></li>
                 <li><p>admisioninformes@villacaritas.edu.pe</p></li>
               </ul>
